--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
 
 .app-container {
   width: 100%;
-  max-width: 400px;
+  max-width: 500px;
   background-color: #6a4df7;
   padding: 20px;
   border-radius: 20px;
@@ -76,7 +76,7 @@ li:hover {
 
 .passenger-list-container {
   width: 100%;
-  max-width: 400px;
+  max-width: 500px;
   background-color: #6a4df7;
   padding: 20px;
   border-radius: 20px;
@@ -91,13 +91,13 @@ input[type="file"] {
   margin-top: 20px;
 }
 
-.passenger-list-container {
+/*.passenger-list-container {
   margin-top: 20px;
-}
+}*/
 
 .back-button {
-  position: sticky;
-  top: 0;
+  position: absolute;
+  top: 20px;
   z-index: 10;
   background-color: #5346d9;
   color: white;
@@ -211,4 +211,18 @@ input[type="file"] {
 
 .announce-btn:hover {
   background-color: #14d541;
+}
+
+.cancel-btn {
+  background-color: #f44336;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.cancel-btn:hover {
+  background-color: #d32f2f;
 }
