--- a/src/App.css
+++ b/src/App.css
@@ -227,30 +227,36 @@ input[type="file"] {
 
 .passenger-table th:nth-child(1),
 .passenger-table td:nth-child(1) {
-  width: 20%;
+  width: 18%;
 }
 
 .passenger-table th:nth-child(2),
 .passenger-table td:nth-child(2) {
-  width: 15%;
+  width: 14%;
 }
 
 .passenger-table th:nth-child(3),
 .passenger-table td:nth-child(3) {
-  width: 15%;
+  width: 12%;
 }
 
 .passenger-table th:nth-child(4),
 .passenger-table td:nth-child(4) {
-  width: 15%;
+  width: 10%;
   text-align: center;
 }
 
 .passenger-table th:nth-child(5),
-.passenger-table td:nth-child(5),
+.passenger-table td:nth-child(5) {
+  width: 12%;
+  text-align: center;
+}
+
 .passenger-table th:nth-child(6),
-.passenger-table td:nth-child(6) {
-  width: 15%;
+.passenger-table td:nth-child(6),
+.passenger-table th:nth-child(7),
+.passenger-table td:nth-child(7) {
+  width: 12%;
   text-align: center;
 }
 
